manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hive
  template:
    metadata:
      labels:
        app: hive
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
