manifests/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive
  namespace: default
spec:
  selector:
    app: hive
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
